Web worker test added - some renaming in prep of web working wasm ReeTracer

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
     <h1>Web Assembly</h1>
     <div class="col settings">
         <h2>Tests</h2>
-        <a href="tests/strings" target="_blank">
+        <a href="tests/strings/" target="_blank">
             <h3>Strings</h3>
             <p>Getting strings into c++ ain't that easy.</p>
         </a>
-        <a href="tests/texture-import" target="_blank">
+        <a href="tests/texture-import/" target="_blank">
             <h3>Texture import</h3>
             <p>Load an image using canvas, put it in the c++ application and get it back again.</p>
         </a>
-        <a href="tests/desaturizer" target="_blank">
+        <a href="tests/desaturizer/" target="_blank">
             <h3>Desaturizer</h3>
             <p>A mini application that desaturizes an image either with Web Assembly or JavaScript. (Guess what's fastest!)</p>
         </a>
     </div>
-    <a class="col settings" href="reetracer" target="_blank">
+    <a class="col settings" href="reetracer/" target="_blank">
         <h2>ReeTracer</h2>
         <p>Ray tracing at its finest.<br>Also its slowest.</p>
         <p>Choose from different scenes to render using either Web Assembly or good ol' plain JavaScript.</p>
     </a>
-    <a class="col settings" href="pong" target="_blank">
+    <a class="col settings" href="pong/" target="_blank">
         <h2>Pong</h2>
         <p>ReeTracer scene optimized to display pong.</p>
         <p>Not playable (yet) though. Only renders the part were the ball is supposed to be.</p>
